# voice_agent_vapi

./: .env.example  README.md  main.py  pyproject.toml
.claude/: settings.local.json
data/prd/: server_requirements_250724.md
src/agent/: agent.py
src/server/: app.py
test/: run_tests.py  test_server.py
